--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -6,10 +6,74 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inbox page</title>
+    <style>
+        .container {
+            display: grid;
+
+            grid-template-areas:
+                "header header header"
+                "nav content content"
+                "footer footer footer";
+
+            grid-template-columns: 200px 1fr 200px;
+            grid-template-rows: auto 1fr auto;
+            grid-gap: 10px;
+
+            height: 100vh;
+        }
+
+        header {
+            grid-area: header;
+        }
+
+        nav {
+            grid-area: nav;
+            margin-left: 0.5rem;
+        }
+
+        main {
+            grid-area: content;
+        }
+
+
+        footer {
+            grid-area: footer;
+        }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
+<!--    <div th:each="folder : ${folders}">-->
+<!--        <p th:text="${folder.label}"></p>-->
+<!--    </div>-->
 
+<div class="container">
+    <header>
+        <h1>Hello, Name</h1>
+    </header>
+
+    <nav>
+        <div class="card">
+            <h5 class="card-header">Folders</h5>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li th:each="folder : ${folders}"  class="list-group-item d-flex justify-content-between align-items-center">
+                        <span th:text="${folder.label}"></span>
+                        <span class="badge bg-primary rounded-pill">14</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        Email list
+    </main>
+
+    <footer>
+        <!-- Footer content -->
+    </footer>
+</div>
 </body>
 </html>
