--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -54,17 +54,8 @@
     </header>
 
     <nav>
-        <div class="card">
-            <h5 class="card-header">Folders</h5>
-            <div class="card-body">
-                <ul class="list-group">
-                    <li th:each="folder : ${folders}"  class="list-group-item d-flex justify-content-between align-items-center">
-                        <span th:text="${folder.label}"></span>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <div th:insert="component/folder-list :: folder-list (panelName = 'Folders', folders = ${defaultFolders})"></div>
+        <div th:insert="component/folder-list :: folder-list (panelName = 'User Folder', folders = ${folders})"></div>
     </nav>
 
     <main>
