--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -59,7 +59,22 @@
     </nav>
 
     <main>
-        Email list
+        <div class="card">
+            <h5 class="card-header">Inbox</h5>
+            <div class="card-body">
+                <div class="list-group">
+                    <a th:each="email : ${emailList}" href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1" th:text="${email.subject}">List group item heading</h5>
+                            <small th:text="${email.agoTimeString}">3 days ago</small>
+                        </div>
+                        <p class="mb-1" th:text="${email.to}">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        <small>Donec id elit non mi porta.</small>
+                    </a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
